# docs/swagger.json
@@ -18,9 +18,9 @@
     "host": "localhost:8088",
     "basePath": "/api/v1",
     "paths": {
-        "/log": {
-            "post": {
-                "description": "add by json body",
+        "/logs": {
+            "get": {
+                "description": "get all ipLogs",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,20 +28,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "iplogs"
+                    "ipLogs"
                 ],
-                "summary": "Add an ipLog",
-                "parameters": [
-                    {
-                        "description": "Add iplogs",
-                        "name": "ipLog",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Log"
-                        }
-                    }
-                ],
+                "summary": "Get all ipLogs",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -68,11 +57,9 @@
                         }
                     }
                 }
-            }
-        },
-        "/logs": {
-            "get": {
-                "description": "get all ipLogs",
+            },
+            "post": {
+                "description": "add by json body",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,9 +67,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "ipLogs"
+                    "iplogs"
                 ],
-                "summary": "Get all ipLogs",
+                "summary": "Add an ipLog",
+                "parameters": [
+                    {
+                        "description": "Add iplogs",
+                        "name": "ipLog",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Log"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
